// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SmartResponseRouterForm > initializes case config 1`] = `
<Dialog
  buttons={
    {
      "primary": {
        "name": "Confirm",
        "onClick": [Function],
      },
      "secondary": {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  gutter={
    <TimeoutControl
      onChanged={[Function]}
      timeout={60}
    />
  }
  headerClass="wait_for_response"
  title="Wait for response"
>
  <TypeList
    __className=""
    initialType={
      {
        "aliases": [
          "switch",
        ],
        "description": "Wait for the contact to respond",
        "form": [Function],
        "localization": [Function],
        "localizeableKeys": [
          "categories",
          "cases",
        ],
        "name": "Wait for response",
        "type": "wait_for_response",
        "visibility": [
          "messaging",
          "messaging_offline",
        ],
      }
    }
    nodeSettings={
      {
        "originalNode": {
          "inboundConnections": {},
          "node": {
            "actions": [],
            "exits": [
              {
                "uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
              },
              {
                "uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
              },
              {
                "uuid": "2dc85899-0577-4f1b-a620-f12094e34b5e",
              },
            ],
            "router": {
              "cases": [
                {
                  "arguments": [
                    "red",
                  ],
                  "category_uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
                  "type": "has_any_word",
                  "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
                },
                {
                  "arguments": [
                    "not blue",
                  ],
                  "category_uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
                  "type": "has_any_word",
                  "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
                },
              ],
              "categories": [
                {
                  "exit_uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
                  "name": "Red",
                  "uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
                },
                {
                  "exit_uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
                  "name": "Other",
                  "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
                },
                {
                  "exit_uuid": "2dc85899-0577-4f1b-a620-f12094e34b5e",
                  "name": "No Response",
                  "uuid": "42ebf1d0-a43e-4ba6-9577-c863b20c88c4",
                },
              ],
              "default_category_uuid": "42ebf1d0-a43e-4ba6-9577-c863b20c88c4",
              "operand": null,
              "result_name": null,
              "type": "switch",
              "wait": {
                "timeout": {
                  "category_uuid": "42ebf1d0-a43e-4ba6-9577-c863b20c88c4",
                  "seconds": 60,
                },
                "type": "msg",
              },
            },
            "uuid": "70ac6ea6-803a-4c33-81c7-dc26803c313f",
          },
          "ui": {
            "config": {
              "cases": {
                "b1f332f3-bdd3-4891-aec5-1843a712dbf1": {
                  "arguments": [
                    "not blue",
                  ],
                },
              },
            },
            "position": {
              "left": 0,
              "top": 0,
            },
            "type": "smart_wait_for_response",
          },
        },
      }
    }
    onChange={[MockFunction spy]}
  />
  <DescriptionAlert
    openDescriptionEdit={[Function]}
  />
  <div
    className="_content_fe5152"
  >
    <div
      className="_phrases_fe5152"
    >
      <div
        className="_header_fe5152"
      >
        <span
          className="_title_fe5152"
        >
          Command phrases
        </span>
        <span
          className="_description_fe5152"
        >
          Write command phrases related to the category
        </span>
      </div>
    </div>
    <div
      className="_categories_fe5152"
    >
      <div
        className="_header_fe5152"
      >
        <span
          className="_title_fe5152"
        >
          Categorize as
        </span>
        <span
          className="_description_fe5152"
        >
          Define the Category you want to classify the Contact's response.
        </span>
      </div>
    </div>
  </div>
  <CaseList
    cases={
      [
        {
          "categoryName": "Red",
          "kase": {
            "arguments": [
              "red",
            ],
            "category_uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
            "type": "has_any_word",
            "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
          },
          "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
          "valid": true,
        },
        {
          "categoryName": "Red",
          "kase": {
            "arguments": [
              "not blue",
            ],
            "category_uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
            "type": "has_any_word",
            "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
          },
          "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
          "valid": true,
        },
      ]
    }
    data-spec="cases"
    onCasesUpdated={[Function]}
    type="smart"
  />
  <OptionalTextInput
    maxLength={64}
    name="Save as result"
    onChange={[Function]}
    toggleText="Save as"
    value={
      {
        "value": "",
      }
    }
  />
</Dialog>
`;

exports[`SmartResponseRouterForm > should render 1`] = `
<Dialog
  buttons={
    {
      "primary": {
        "name": "Confirm",
        "onClick": [Function],
      },
      "secondary": {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  gutter={
    <TimeoutControl
      onChanged={[Function]}
      timeout={0}
    />
  }
  headerClass="wait_for_response"
  title="Wait for response"
>
  <TypeList
    __className=""
    initialType={
      {
        "aliases": [
          "switch",
        ],
        "description": "Wait for the contact to respond",
        "form": [Function],
        "localization": [Function],
        "localizeableKeys": [
          "categories",
          "cases",
        ],
        "name": "Wait for response",
        "type": "wait_for_response",
        "visibility": [
          "messaging",
          "messaging_offline",
        ],
      }
    }
    nodeSettings={
      {
        "originalAction": null,
        "originalNode": {
          "inboundConnections": {},
          "node": {
            "actions": [],
            "exits": [
              {
                "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
              },
              {
                "uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
              },
            ],
            "router": {
              "cases": [
                {
                  "arguments": [
                    "red",
                  ],
                  "category_uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
                  "type": "has_any_word",
                  "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
                },
              ],
              "categories": [
                {
                  "exit_uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
                  "name": "Red",
                  "uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
                },
                {
                  "exit_uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
                  "name": "Other",
                  "uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
                },
              ],
              "default_category_uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
              "operand": "@input.text",
              "result_name": "",
              "type": "switch",
              "wait": {
                "type": "msg",
              },
            },
            "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
          },
          "ui": {
            "position": {
              "left": 0,
              "top": 0,
            },
            "type": "wait_for_response",
          },
        },
      }
    }
    onChange={[MockFunction spy]}
  />
  <DescriptionAlert
    openDescriptionEdit={[Function]}
  />
  <div
    className="_content_fe5152"
  >
    <div
      className="_phrases_fe5152"
    >
      <div
        className="_header_fe5152"
      >
        <span
          className="_title_fe5152"
        >
          Command phrases
        </span>
        <span
          className="_description_fe5152"
        >
          Write command phrases related to the category
        </span>
      </div>
    </div>
    <div
      className="_categories_fe5152"
    >
      <div
        className="_header_fe5152"
      >
        <span
          className="_title_fe5152"
        >
          Categorize as
        </span>
        <span
          className="_description_fe5152"
        >
          Define the Category you want to classify the Contact's response.
        </span>
      </div>
    </div>
  </div>
  <CaseList
    cases={
      [
        {
          "categoryName": "Red",
          "kase": {
            "arguments": [
              "red",
            ],
            "category_uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
            "type": "has_any_word",
            "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
          },
          "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
          "valid": true,
        },
      ]
    }
    data-spec="cases"
    onCasesUpdated={[Function]}
    type="smart"
  />
  <OptionalTextInput
    maxLength={64}
    name="Save as result"
    onChange={[Function]}
    toggleText="Save as"
    value={
      {
        "value": "",
      }
    }
  />
</Dialog>
`;

exports[`SmartResponseRouterForm > updates > should save changes 1`] = `
{
  "cases": [
    {
      "categoryName": "Red",
      "kase": {
        "arguments": [
          "red",
        ],
        "type": "has_any_word",
      },
      "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
      "valid": true,
    },
    {
      "categoryName": "Red",
      "kase": {
        "arguments": [
          "maroon",
        ],
        "type": "has_any_word",
      },
      "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
      "valid": true,
    },
    {
      "categoryName": "Green",
      "kase": {
        "arguments": [
          "green",
        ],
        "type": "has_any_word",
      },
      "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
      "valid": true,
    },
  ],
  "hiddenCases": [],
  "resultName": {
    "validationFailures": [],
    "value": "Favorite Color",
  },
  "timeout": 180,
  "valid": true,
}
`;

exports[`SmartResponseRouterForm > updates > should save changes 2`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "inboundConnections": {},
        "node": {
          "actions": [],
          "exits": [
            {
              "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
            },
            {
              "uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
            },
            {
              "uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
            },
            {
              "uuid": "2dc85899-0577-4f1b-a620-f12094e34b5e",
            },
            {
              "uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
            },
          ],
          "router": {
            "cases": [
              {
                "arguments": [
                  "red",
                ],
                "category_uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
                "type": "has_any_word",
              },
              {
                "arguments": [
                  "maroon",
                ],
                "category_uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
                "type": "has_any_word",
              },
              {
                "arguments": [
                  "green",
                ],
                "category_uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
                "type": "has_any_word",
              },
              {
                "arguments": [],
                "category_uuid": "42ebf1d0-a43e-4ba6-9577-c863b20c88c4",
                "type": "has_category",
                "uuid": "70ac6ea6-803a-4c33-81c7-dc26803c313f",
              },
            ],
            "categories": [
              {
                "exit_uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
                "name": "Red",
                "uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
              },
              {
                "exit_uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
                "name": "Green",
                "uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
              },
              {
                "exit_uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
                "name": "Failure",
                "uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
              },
              {
                "exit_uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
                "name": "No Response",
                "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
              },
              {
                "exit_uuid": "2dc85899-0577-4f1b-a620-f12094e34b5e",
                "name": "Other",
                "uuid": "42ebf1d0-a43e-4ba6-9577-c863b20c88c4",
              },
            ],
            "default_category_uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
            "operand": "@input.text",
            "result_name": "Favorite Color",
            "type": "smart",
            "wait": {
              "timeout": {
                "category_uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
                "seconds": 180,
              },
              "type": "msg",
            },
          },
          "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
        },
        "ui": {
          "config": {
            "cases": {},
          },
          "position": null,
          "type": "wait_for_response",
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
